Preventing blocks from overflowing document

--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -16,6 +16,8 @@
   --border-radius-tertiary: 6px;
 
   --navbar-height: 66.4px;
+  --team-header-height: 78px;
+  --group-selector-height: 76px;
 }
 
 * {
