--- a/frontend/components/group/Group.module.scss
+++ b/frontend/components/group/Group.module.scss
@@ -1,14 +1,18 @@
 .container {
     display: flex;
+    align-items: flex-start;
     gap: var(--spacing-secondary);
     padding: var(--spacing-primary);
+    height: calc(100vh - var(--navbar-height) - var(--team-header-height) - var(--group-selector-height));
 }
 .block {
     --border-radius: var(--border-radius-secondary);
     border-radius: var(--border-radius);
     background-color: var(--background-tertiary);
     width: 300px;
-    height: 100%;
+    max-height: 95%;
+    display: flex;
+    flex-direction: column;
 }
 .block-header {
     padding: var(--spacing-secondary);
@@ -28,14 +32,22 @@
     font-size: 12px;
     margin-top: 1px;
 }
-.block-content {
-    padding: var(--spacing-secondary);
-    display: grid;
-    gap: var(--spacing-tertiary);
-}
 .block-tasks {
     display: grid;
     gap: var(--spacing-tertiary);
+    padding: var(--spacing-secondary);
+    padding-bottom: 0;
+    max-height: 100%;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+        width: 14px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--background-quaternary);
+        border: 4px solid var(--background-tertiary);
+        border-radius: 120px;
+    }
 }
 .block-task {
     padding: var(--spacing-tertiary);
@@ -87,9 +99,14 @@
     height: 100%;
     background-color: transparent;
 }
+.block-footer {
+    padding: var(--spacing-secondary);
+    width: 100%;
+}
 .add-task-button {
     border-color: var(--background-quaternary) !important;
     font-size: 12px;
+    width: 100%;
 
     &:hover {
         background-color: var(--background-quaternary) !important;
